--- a/categories.html
+++ b/categories.html
@@ -13,10 +13,10 @@
                     <a href="javascript:void(0)" class="dropbtn">Categories</a>
                     <div class="dropdown-content">
                         <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="categories.html#SoupsSection">Soups</a>
-                        <a href="categories.html#DessertsSection">Desserts</a>
-                        <a href="categories.html#CasserolesSection">Casseroles</a>
-                        <a href="categories.html#CrockpotsSection">Crockpots</a>
+                        <a href="categories.html#Soups">Soups</a>
+                        <a href="categories.html#Desserts">Desserts</a>
+                        <a href="categories.html#Casseroles">Casseroles</a>
+                        <a href="categories.html#Crockpots">Crockpots</a>
                         <a href="categories.html#Pastas">Pastas</a>
                     </div>
                 </li>
@@ -27,226 +27,211 @@
     </head>
 
     <body> 
-        <section class="categories">
-            <a id="SoupsSection"><h1>Soups</h1></a>
+        <section id="Soups" class="categories">
+            <h1>Soups</h1>
             <div class="category-container">
                 <div class="card">
                     <div class="img-container">
-                        <img src="/recipe images/Taco-Soup-foodiecrush.com-010.jpg">
+                        <img src="RecipeImages/Taco-Soup-foodiecrush.com-010.jpg">
                     </div>
                     <div class="card-content">
                         <h3>Taco Soup</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>This soup packs a punch of flavor in an easy-to-follow recipe!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/soup1.html" class="btn">Read More</a>
+                        <a href="RecipePages/soup1.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/Homemade-Creamy-Vegtable-Soup-Recipe-1200.jpg">
+                        <img src="RecipeImages/Homemade-Creamy-Vegtable-Soup-Recipe-1200.jpg">
                     </div>
                     <div class="card-content">
                         <h3>Creamy Vegetable Soup</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>With this quick recipe, who says kids (and adults) can't eat healthy AND delicious at the same time?!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/soup2.html" class="btn">Read More</a>
+                        <a href="RecipePages/soup2.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/quick-and-easy-chicken-noodle-soup-allrecipes.png">
+                        <img src="RecipeImages/quick-and-easy-chicken-noodle-soup-allrecipes.png">
                     </div>
                     <div class="card-content">
                         <h3>Chicken Noodle Soup</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>So, so good for the soul!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/soup3.html" class="btn">Read More</a>
+                        <a href="RecipePages/soup3.html" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="categories">
-           <a id="DessertsSection"> <h1>Desserts</h1> </a>
+        <section id="Desserts" class="categories">
+            <h1>Desserts</h1>
             <div class="category-container">
                 <div class="card">
                     <div class="img-container">
-                        <img src="/recipe images/Earl-Grey-Cake.png">
+                        <img src="RecipeImages/Earl-Grey-Cake.png">
                     </div>
                     <div class="card-content">
                         <h3>Earl Grey Cake</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>Feel like British royalty with this easy-to-make and delicious tea-time dessert!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/dessert1.html" class="btn">Read More</a>
+                        <a href="RecipePages/dessert1.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="/recipe images/Pineapple-Sherbet_.png">
+                        <img src="RecipeImages/Pineapple-Sherbet_.png">
                     </div>
                     <div class="card-content">
                         <h3>Pineapple Sherbet</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>Light, delicious and perfect for those hot summer days!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/dessert2.html" class="btn">Read More</a>
+                        <a href="RecipePages/dessert2.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/Oreo-Cheesecake-Cookies.jpg">
+                        <img src="RecipeImages/Oreo-Cheesecake-Cookies.jpg">
                     </div>
                     <div class="card-content">
                         <h3>Oreo Cheesecake Cookies</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>Give yourself an easy-to-make, delicious treat, you deserve it!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/dessert3.html" class="btn">Read More</a>
+                        <a href="RecipePages/dessert3.html" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="categories">
-            <a id="CasserolesSection"> <h1>Casseroles</h1> </a>
+        <section id="Casseroles" class="categories">
+            <h1>Casseroles</h1>
             <div class="category-container">
                 <div class="card">
                     <div class="img-container">
-                        <img src="/recipe images/25286broccoli-cheese-casserole.png">
+                        <img src="RecipeImages/25286broccoli-cheese-casserole.png">
                     </div>
                     <div class="card-content">
                         <h3>Broccoli Cheese Casserole</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>A great recipe for those cold days where you just want to snuggle and sit by a fireplace!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/casserole1.html" class="btn">Read More</a>
+                        <a href="RecipePages/casserole1.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="/recipe images/Buffalo-Chicken-Casserole.png">
+                        <img src="RecipeImages/Buffalo-Chicken-Casserole.png">
                     </div>
                     <div class="card-content">
                         <h3>Buffalo Chicken Casserole</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>Get in the big game spirit with this amazing, surprisingly simple recipe!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/casserole2.html" class="btn">Read More</a>
+                        <a href="RecipePages/casserole2.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/Sausage-Breakfast-Casseroled.jpg">
+                        <img src="RecipeImages/Sausage-Breakfast-Casseroled.jpg">
                     </div>
                     <div class="card-content">
                         <h3>Sausage Breakfast Casserole</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>A great way to start your morning!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/casserole3.html" class="btn">Read More</a>
+                        <a href="RecipePages/casserole3.html" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="categories">
-            <a id="CrockpotsSection"> <h1>Crockpots</h1> </a>
+        <section id="Crockpots" class="categories">
+            <h1>Crockpots</h1>
             <div class="category-container">
                 <div class="card">
                     <div class="img-container">
-                        <img src="/recipe images/Crockpot-Apple-Cider.jpg">
+                        <img src="RecipeImages/Crockpot-Apple-Cider.jpg">
                     </div>
                     <div class="card-content">
                         <h3>Crockpot Apple Cider</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>The perfect pairing for those chilly fall nights!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/crockpot1.html" class="btn">Read More</a>
+                        <a href="RecipePages/crockpot1.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/pozole rojo.jpg">
+                        <img src="RecipeImages/pozole rojo.jpg">
                     </div>
                     <div class="card-content">
                         <h3>Pozole Rojo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>Bring a piece of Mexico home with this amazingly delicious recipe!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/crockpot2.html" class="btn">Read More</a>
+                        <a href="RecipePages/crockpot2.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/Pumpkin-Cranberry-Bread-Pudding.png">
+                        <img src="RecipeImages/Pumpkin-Cranberry-Bread-Pudding.png">
                     </div>
                     <div class="card-content">
                         <h3>Pumpkin Cranberry Bread Pudding</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>Looking for a star recipe this Thanksgiving? Look no further!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/crockpot3.html" class="btn">Read More</a>
+                        <a href="RecipePages/crockpot3.html" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="categories">
-            <a id="Pastas"> <h1>Pastas</h1> </a>
+        <section id="Pastas" class="categories">
+            <h1>Pastas</h1>
             <div class="category-container">
                 <div class="card">
                     <div class="img-container">
-                        <img src="/recipe images/Green-Spaghetti.jpg">
+                        <img src="RecipeImages/Green-Spaghetti.jpg">
                     </div>
                     <div class="card-content">
                         <h3>Green Spaghetti</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>A Mexican twist on a classic, this recipe is sure to wow your guests!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/pasta1.html" class="btn">Read More</a>
+                        <a href="RecipePages/pasta1.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/Air-Fryer-Mac-and-Cheese.jpg">
+                        <img src="RecipeImages/Air-Fryer-Mac-and-Cheese.jpg">
                     </div>
                     <div class="card-content">
                         <h3>Air Fryer Mac & Cheese</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>Bring a winner plate to your next party with this mouth-watering recipe!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/pasta2.html" class="btn">Read More</a>
+                        <a href="RecipePages/pasta2.html" class="btn">Read More</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="/recipe images/ensalada_de_coditos_mexican_style.png">
+                        <img src="RecipeImages/ensalada_de_coditos_mexican_style.png">
                     </div>
                     <div class="card-content">
-                        <h3>Mexican Macoroni Salad</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <h3>Mexican Macaroni Salad</h3>
+                        <p>With both Mexican and Italian flavors in one place, there's no way to fail!</p>
                     </div>
                     <div class="button">
-                        <a href="/RecipePages/pasta3.html" class="btn">Read More</a>
+                        <a href="RecipePages/pasta3.html" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
