--- a/RecipePages/casserole1.html
+++ b/RecipePages/casserole1.html
@@ -3,36 +3,37 @@
 <html>
     <head>
         <title>Dish Delight</title>
-        <script src="scripts.js"></script>
-        <link rel="stylesheet" href="/stylesheet.css">
+        <script src="../scripts.js"></script>
+        <link rel="stylesheet" href="../stylesheet.css">
         
         <section class="navbar">
             <ul>
-                <li><a href="/homepage.html">Home</a></li>
+                <li><a href="../homepage.html">Home</a></li>
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">Categories</a>
                     <div class="dropdown-content">
                         <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="/categories.html#SoupsSection">Soups</a>
-                        <a href="/categories.html#DessertsSection">Desserts</a>
-                        <a href="/categories.html">Casseroles</a>
-                        <a href="/categories.html#CrockpotsSection">Crockpots</a>
-                        <a href="/categories.html#Pastas">Pastas</a>
+                        <a href="../categories.html#Soups">Soups</a>
+                        <a href="../categories.html#Desserts">Desserts</a>
+                        <a href="../categories.html#Casseroles">Casseroles</a>
+                        <a href="../categories.html#Crockpots">Crockpots</a>
+                        <a href="../categories.html#Pastas">Pastas</a>
                     </div>
                 </li>
-                <li><a href="/about.html">About Us</a></li>
+                <li><a href="../about.html">About Us</a></li>
                 <h1>Dish Delight</h1>
             </ul>
         </section>
     </head>
     
     <body>
+	<!--Recipe name section-->
         <section class="recipe-title">
             <h1>Broccoli Cheese Casserole</h1>
         </section>
         <!--Recipe image section-->
         <section class="recipe-image">
-            <img src="/recipe images/25286broccoli-cheese-casserole.png" alt="Broccoli Cheese Casserole on a serving spoon">
+            <img src="../RecipeImages/25286broccoli-cheese-casserole.png" alt="Broccoli Cheese Casserole on a serving spoon">
         </section>
         <!--Ingredients section-->
         <section class="ingredients">
@@ -63,7 +64,7 @@
 		<button onclick="copyRecipe()">Copy Recipe</button>
 		<button onclick="printPage()">Print Page</button>
 		<button onclick="goBack()">Go Back</button>
-    </div>
+    	</div>
     </body>
 
     <footer>
@@ -72,4 +73,5 @@
         	<p>Original recipe can be found <a href="https://www.allrecipes.com/recipe/25286/broccoli-cheese-casserole/">here.</a></p>
 	</div>
     </footer>
+	
 </html>
