updated about me blurb and added link to my github

--- a/about.html
+++ b/about.html
@@ -66,11 +66,10 @@
                     </div>
                     <div class="card-content">
                         <h3>Lourdes "Lola" Renteria</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>I am a senior Computer Science student currently interested in software, web, and mobile application development.</p>
                     </div>
                     <div class="button">
-                        <a href="" class="btn">Personal Site</a>
+                        <a href="https://github.com/roselias" class="btn">Personal Site</a>
                     </div>
                 </div>
            
