--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
            
                 <div class="card">
                     <div class="img-container">
-                        <img src="recipe images/Air-Fryer-Mac-and-Cheese.jpg">
+                        <img src="OtherImages/LinkedIn Headshot.JPG">
                     </div>
                     <div class="card-content">
                         <h3>Christian Tuarez</h3>
