--- a/about.html
+++ b/about.html
@@ -79,11 +79,10 @@
                     </div>
                     <div class="card-content">
                         <h3>Christian Tuarez</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>Since I was a child, I always thought computers were the closest thing to magic! Currently, I am a senior Computer Science student who is interested in software, data and how they intersect in everyday life.</p>
                     </div>
                     <div class="button">
-                        <a href="" class="btn">Personal Site</a>
+                        <a href="https://github.com/christiantuarez" class="btn">Personal Site</a>
                     </div>
                 </div> 
             </div>
