--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="card-content">
                         <h3>Christian Tuarez</h3>
-                        <p>Since I was a child, I always thought computers were the closest thing to magic! Currently, I am a senior Computer Science student who is interested in software, data and how they intersect in everyday life.</p>
+                        <p>Since I was a child, I always thought computers were the closest thing to magic! Currently, a senior Computer Science and Data Science student.</p>
                     </div>
                     <div class="button">
                         <a href="https://github.com/christiantuarez" class="btn">Personal Site</a>
