--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
                     <a href="javascript:void(0)" class="dropbtn">Categories</a>
                     <div class="dropdown-content">
                         <!--Dropdown menu with each link jumping to specific setion of categories webpage-->
-                        <a href="categories.html#SoupsSection">Soups</a>
-                        <a href="categories.html#DessertsSection">Desserts</a>
-                        <a href="categories.html#CasserolesSection">Casseroles</a>
-                        <a href="categories.html#CrockpotsSection">Crockpots</a>
+                        <a href="categories.html#Soups">Soups</a>
+                        <a href="categories.html#Desserts">Desserts</a>
+                        <a href="categories.html#Casseroles">Casseroles</a>
+                        <a href="categories.html#Crockpots">Crockpots</a>
                         <a href="categories.html#Pastas">Pastas</a>
                     </div>
                 </li>
