Chris Bio and link
Finished the about me card for chris charles

--- a/about.html
+++ b/about.html
@@ -52,11 +52,11 @@
                     </div>
                     <div class="card-content">
                         <h3>Christopher Charles</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti asperiores,
-                        ea quidem</p>
+                        <p>a driven web developer with a passion for creating innovative and user-friendly digital solutions. With a focus on 
+                            continuous learning and improvement.</p>
                     </div>
                     <div class="button">
-                        <a href="" class="btn">Personal Site</a>
+                        <a href="https://github.com/assiduouslycharles" class="btn">Personal Site</a>
                     </div>
                 </div>
                 
